objects/Account.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Location_Change_Request__c</fullName>
        <label>Bill To Location Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Location__c</fullName>
        <label>Bill To Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Code_Change_Request__c</fullName>
        <inlineHelpText>Type &apos;REMOVE&apos; to nullify Bill To Postal/Zip Code.</inlineHelpText>
        <label>Bill To Postal Code Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Zip_Code__c</fullName>
        <label>Bill To Postal/Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Change_Request__c</fullName>
        <label>Bill To State Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bill_To_Country_Change_Request__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bill_To_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Foundry Sales</fullName>
                </value>
                <value>
                    <fullName>International Foundry Sales</fullName>
                </value>
                <value>
                    <fullName>ASIC and A&amp;D Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&quot;Contract Customer&quot; check box to display the information on condition</description>
        <label>Contract Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Customer__c</fullName>
        <label>Converted Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Corporate Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_and_Bill_To_Addresses_Authorized__c</fullName>
        <formula>IF( 
AND( 
Corp_and_Bill_To_Addresses_Qualified__c == &quot;TRUE&quot; 
, NOT(ISBLANK(Bill_To_Location__c)) 
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Corp and Bill To Addresses (Authorized)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_and_Bill_To_Addresses_Qualified__c</fullName>
        <formula>IF( 
AND( 
NOT(ISBLANK(Bill_To_Address_1__c)) 
, NOT(ISBLANK(Bill_To_City__c)) 
, NOT(ISPICKVAL(Bill_To_Country__c, &quot;&quot;)) 
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Corp and Bill To Addresses (Qualified)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_and_Bill_To_Addresses_Readiness__c</fullName>
        <formula>IF (Corp_and_Bill_To_Addresses_Authorized__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_3&quot;, &quot;&quot;, 30, 65) + &quot;Authorized Ready&quot;, 
IF (Corp_and_Bill_To_Addresses_Qualified__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_2&quot;, &quot;&quot;, 30, 65) + &quot;Ready for Qualified&quot;, IMAGE (&quot;resource/Account_Progress_1&quot;, &quot;&quot;, 30, 65) + &quot;Not Ready&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please fill up the following Address Information: 
-  Corporate Address 1
-  Corporate City
-  Corporate Country
-  Bill To Address 1
-  Bill To City
-  Bill To Country
-  Bill To Location</inlineHelpText>
        <label>Corp and Bill To Addresses Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_1_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate Address 1 by the portal users</description>
        <label>Corporate Address 1 Change Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_1__c</fullName>
        <label>Corporate Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_2_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate Address 2 by the portal users</description>
        <label>Corporate Address 2 Change Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_2__c</fullName>
        <label>Corporate Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_3_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate Address 3 by the portal users</description>
        <label>Corporate Address 3 Change Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_3__c</fullName>
        <label>Corporate Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_City_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate City by the portal users</description>
        <label>Corporate City Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_City__c</fullName>
        <label>Corporate City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Country_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate Country by the portal users</description>
        <label>Corporate Country Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Country__c</fullName>
        <label>Corporate Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Postal_Zip_Code_Request_Change__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate Postal/Zip Code by the portal users</description>
        <label>Corporate Postal/Zip Code Request Change</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Postal_Zip_Code__c</fullName>
        <label>Corporate Postal/Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_State_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Corporate State by the portal users</description>
        <label>Corporate State Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Corporate_Country_Change_Request__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_State__c</fullName>
        <label>Corporate State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Corporate_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Account_address__c</fullName>
        <label>Count Account address</label>
        <summaryFilterItems>
            <field>Account_Address__c.Type__c</field>
            <operation>equals</operation>
            <value>Bill To Address</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Address__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Opty__c</fullName>
        <label>Count of Opty</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>contains</operation>
            <value>1. Discovery, 2. Assessment, 3. Recommendation, 4. Decision, 5. Commitment, 6. First Product TO</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_HCM_Login_ID__c</fullName>
        <description>Field created for Siebel Integration 
- Used in the outbound message</description>
        <formula>CreatedBy.HCM_Login_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <description>Credit Balance is a synch via batch load from ERP.</description>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Credit Limit is a data synch from ERP.</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Term__c</fullName>
        <description>Credit Term is being updated from ERP</description>
        <label>Credit Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Quarterly_Revenue__c</fullName>
        <inlineHelpText>Provide Estimate. Used to qualify new accounts.</inlineHelpText>
        <label>Current Quarterly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Customer Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>TFA</fullName>
                </value>
                <value>
                    <fullName>CCTFA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Corp_Code__c</fullName>
        <label>Customer Corp Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Model__c</fullName>
        <inlineHelpText>What is the engagement model with this customer?</inlineHelpText>
        <label>Customer Engagement Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>Foundry</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Portal_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2 : It looks up to the User Object.User will be the Customer Portal Admin user.</description>
        <label>POC Published in Customer Portal</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 OR 2)</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Customer Portal Admin,Customer Portal Profile,Reseller Portal Admin,Reseller Portal Profile,Supplier Portal Admin,Supplier Portal Profile,Enablement Partner Portal Admin,Enablement Partner Portal Profile</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Overage Customer Portal Admin,Overage Customer Portal Profile,Overage Reseller Portal Admin,Overage Reseller Portal Profile,Overage Supplier Portal Admin,Overage Supplier Portal Profile,Overage Enablement Partner Portal Admin,Overage Enablement Partner Po</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>